2023-05-19  Charlie Zender  <zender@uci.edu>

	* Fix output for all these variables by initializing them to 0.0 before use (doh!)

	* Comment-out netCDF put_var lines these variables that now cause IEEE errors on MacOS due to new compilers/netCDF:
	lmn_spc_aa_sfc, ntn_spc_aa_sfc, odac_spc_mpr, odxc_spc_mpr, odxc_spc_ttl, trn_spc_atm_mpr, lmn_spc_aa_ndr_sfc

2021-10-05  Charlie Zender  <zender@uci.edu>

	* Verify that swnb2 still works on LGGE snowpack profiles, once	profiles are regenerated to include newer constituents (CO, etc.)

2019-07-09  Charlie Zender  <zender@uci.edu>

	* Write npc_O2O2 as nf90_double not nf90_float to avoid overflow

2018-12-19  Charlie Zender  <zender@uci.edu>

	* Implement set_warm and set_cold options to bypass temperature	slope method

2018-12-17  Charlie Zender  <zender@uci.edu>

	* Read-in massaged data of eight segments. Data are unreliable in UV/Vis. GOB90 looks better there.

	* Utilize abs_xsx and deprecate odal_O2O2_PUNC_O2_PUNP_O2

2018-12-10  Charlie Zender  <zender@uci.edu>

	* Merge GOB90 and HTR16 data processing for O2X

	* Eliminate use of k_O2_O2 equilibrium coefficient to scale cross-sections

2018-12-02  Charlie Zender  <zender@uci.edu>

	* Updating O2X.F90 to read CIA files

2018-11-30  Charlie Zender  <zender@uci.edu>

	* Initialize srt_one(1)=1 in abs_xsx_get() and mlk_prm_get()

2018-10-28  Charlie Zender  <zender@uci.edu>

	* Change swnb2, O3.F90, and O2.F90 to use abs_xsx_get() access mechanism for O3 and O2

2018-10-23  Charlie Zender  <zender@uci.edu>

	* ACA 2.4.0 release procedure:
	cd ~/sw;git commit -a -m 'Version 2.4.0: Portland';git push
	git tag -a 2.4.0 -m 'Extend grid to LW; HITRAN2016; CO N2O CFC11 CFC12 JPL O3';git push --tags

	* Current snapshot works fine on firn with gcc7 on MacOS 10.13

	* Zero qnt_yld_NO2 and abs_xsx_NO2_dadT when not present in input file

	* Turn-on CO by default since IEEE issues have disappeared

	* Settle-on new default 10 cm-1/1 cm-1 SW/LW resolution
