@@ -841,7 +841,7 @@ CXX_pgCC='pgCC'
 FC_g95='g95'
 FC_gfortran='gfortran'
 FC_gfortran_conda='x86_64-conda-linux-gnu-gfortran'
-FC_gfortran_homebrew='gfortran-12'
+FC_gfortran_homebrew='gfortran-13'
 FC_gfortran_macports='gfortran-mp-12'
 FC_ifort='ifort'
 FC_pathf95='pathf95'
