@@ -1,3 +1,9 @@
+2023-10-17  Charlie Zender  <zender@uci.edu>
+
+	* Update to gfortran-13 on Homebrew
+
+	* Add --rfm, --afgl long-options for clarity
+
 2023-05-19  Charlie Zender  <zender@uci.edu>
 
 	* Fix output for all these variables by initializing them to 0.0 before use (doh!)
